kustomize-sample/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample
  template:
    metadata:
      labels:
        app: sample
    spec:
      containers:
        - image: horang-registry.kr.ncr.ntruss.com/lms-horang-frontend:latest
          name: horang-registry
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ncp-ncr-creds
