kustomize-sample/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: sample
